<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/part_picture"
        style="@style/PartImageSmallStyle"
        android:layout_gravity="center"
        android:contentDescription="@string/info_photo"
        android:scaleType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/spacer_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:text="@string/part_name"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:text="@string/part_type"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:text="@string/part_data"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:text="@string/part_fits"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:text="@string/part_stock"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:text="@string/part_in_stock"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:text="@string/part_price_eur"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/spacer_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/part_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                tools:text="Part text" />

            <TextView
                android:id="@+id/part_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                tools:text="Category" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true">

                <TextView
                    android:id="@+id/part_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_5dp"
                    android:textColor="@android:color/black"
                    android:textStyle="normal"
                    tools:text="description" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/part_fits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                tools:text="fits" />

            <TextView
                android:id="@+id/part_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                tools:text="15" />

            <TextView
                android:id="@+id/parts_in_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="Yes" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/part_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="30" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/spacer_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sell_button"
            style="@style/GenericButtonStyle"
            android:focusable="false"
            android:text="@string/sell_button" />

    </LinearLayout>

</LinearLayout>